--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 html {
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 18px;
     background: #fff;
 }
 
@@ -30,7 +30,7 @@ body {
     display: table;
     background-color: #fff;
     color: #333;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 code {
@@ -79,20 +79,19 @@ th {
     vertical-align: middle;
 }
 
-
-/*.main {
-    box-shadow: 0 0 2px 2px rgba(0, 0, 0, .15);
-}*/
-
 .header {
     padding: 1em 1em 2em 1em;
     max-width: 768px;
-    background-color: #444;
-    color: #f3f3f3;
+    background-color: #f7f7f7;
+    color: #333;
+}
+
+.h1_title {
+    font-family: 'Birthstone', cursive;
 }
 
 .title {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .header>.title {
@@ -127,7 +126,7 @@ p.address {
 
 .footer {
     padding: 1em;
-    background-color: #ddd;
+    background-color: #f7f7f7;
     max-width: 768px;
 }
 
